table alignments fixed in css

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,9 +56,10 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
 
+
 }
 table, th, td {
-    border: 1px solid black;
+    border: 2px solid #ac3b61;
 }
 
 
@@ -201,5 +202,21 @@ label {
 }
 
 .form_title {
+    text-align: center;
+}
+
+#user_list {
+    width: 100%;
+    text-align: center;
+}
+
+#question_table {
+    width: 100%;
+    text-align: center;
+
+}
+
+#answer_table {
+    width: 100%;
     text-align: center;
 }
